Aula 03 - Imersão de Dados Alura - Terceira Edição

--- a/Notebooks/Aula03_ImersãoDados3_Alura.ipynb
+++ b/Notebooks/Aula03_ImersãoDados3_Alura.ipynb
@@ -6,7 +6,7 @@
       "name": "Aula03_ImersãoDados3_Alura.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMiQGIh0neWnalAXges81m3",
+      "authorship_tag": "ABX9TyNfQXChZSCwQBfn45wNLdKf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,10 +68,12 @@
         "Vamos iniciar com as proporções e tempo.\n",
         "Aprendemos a utilizar a Tabela de frequência - Crosstab, analisando primeiramente quantas doses, foram expostas em qual tempo, e as doses e tempo com o tratamento.\n",
         "\n",
-        "Após iniciamos a análise pelo gráfico de dispersão, dados dos genes g-0 e g-3 e g-0 e g-8 pelo scatterplot. Depois criamos o mesmo gráfico utilizando o lmplot para incluir uma linha para identificar o relacionamento dos genes.\n",
+        "Após iniciamos a análise pelo gráfico de dispersão, dados dos genes g-0 e g-3 e g-0 e g-8 pelo scatterplot. Depois criamos o mesmo gráfico utilizando o lmplot para incluir uma linha para identificar o relacionamento de duas variáveis.\n",
         "\n",
-        "Geramos uma tabela de correlação entre os gente pelo .corr()\n",
-        "Após estudado a correlação que na prática pode não ter correlação na prática. Como mostrado no site Spurious Correlations. Utilizamos a matriz de correlação do seaborn (ctrl c e ctrl v do site do seaborn).\n",
+        "Geramos uma tabela de correlação entre os expressões genicas e tipos celulares pelo .corr()\n",
+        "Após o estudo, entemos que essa correlação, pode não ter correlação na prática. Como mostrado no site Spurious Correlations. \n",
+        "\n",
+        "Utilizamos a matriz de correlação das exoressões genicas e tipos celulares do seaborn (ctrl c e ctrl v do site do seaborn).\n",
         "\n",
         "\n",
         "\n",
@@ -104,7 +106,7 @@
         "dados = pd.read_csv(url_dados, compression = 'zip')\n",
         "dados"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1176,7 +1178,7 @@
         "mapa = {'droga': 'composto'}\n",
         "dados.rename(columns=mapa, inplace=True)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1192,7 +1194,7 @@
       "source": [
         "dados.head()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1751,7 +1753,7 @@
       "source": [
         "cod_compostos = dados['composto'].value_counts().index[0:5]"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1766,7 +1768,7 @@
       "source": [
         "cod_compostos"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1795,7 +1797,7 @@
       "source": [
         "dados.query('composto in @cod_compostos')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2872,7 +2874,7 @@
         "\n",
         "pd.crosstab(dados['dose'], dados['tempo'])"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2954,7 +2956,7 @@
         "\n",
         "pd.crosstab([dados['dose'], dados['tempo']], dados['tratamento'])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3060,7 +3062,7 @@
         "\n",
         "pd.crosstab([dados['dose'], dados['tempo']], dados['tratamento'], normalize='index')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3166,7 +3168,7 @@
         "\n",
         "pd.crosstab([dados['dose'], dados['tempo']], dados['tratamento'], values=dados['g-0'], aggfunc='mean')"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3269,7 +3271,7 @@
       "source": [
         "dados[['g-0', 'g-3']]"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3395,7 +3397,7 @@
       "source": [
         "dados[['g-0', 'g-8']]"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3529,7 +3531,7 @@
         "\n",
         "sns.scatterplot(x='g-0', y = 'g-3', data=dados)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3573,7 +3575,7 @@
         "\n",
         "sns.scatterplot(x='g-0', y = 'g-8', data=dados)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3614,7 +3616,7 @@
       "source": [
         "sns.lmplot(data=dados, x='g-0', y='g-8', line_kws={'color': 'red'})"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3655,7 +3657,7 @@
       "source": [
         "sns.lmplot(data=dados, x='g-0', y='g-8', line_kws={'color': 'red'}, col='tratamento', row='tempo')"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3698,7 +3700,7 @@
         "\n",
         "dados.loc[:,'g-0':'g-771'].corr()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4768,7 +4770,7 @@
         "# Matriz de Correlação entre os genes do g-0 até o g-50\n",
         "corr = dados.loc[:,'g-0':'g-50'].corr()"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4797,7 +4799,7 @@
         "sns.heatmap(corr, mask=mask, cmap=cmap, center=0,\n",
         "            square=True, linewidths=.5, cbar_kws={\"shrink\": .5})"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4834,7 +4836,7 @@
         "# Matriz de Correlação entre as células do c-0 até o c-50\n",
         "corr_celular = dados.loc[:,'c-0':'c-50'].corr()"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4861,7 +4863,7 @@
         "sns.heatmap(corr_celular, mask=mask, cmap=cmap, center=0,\n",
         "            square=True, linewidths=.5, cbar_kws={\"shrink\": .5})"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
