Aula 04 - Imersão de Dados Alura - Terceira Edição

--- a/Notebooks/Aula04_ImersãoDados3_Alura.ipynb
+++ b/Notebooks/Aula04_ImersãoDados3_Alura.ipynb
@@ -6,7 +6,7 @@
       "name": "Aula04_ImersãoDados3_Alura.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyON9hwWvU82AIcl5uv2QpFx",
+      "authorship_tag": "ABX9TyPSCeewlYUeBVYjJ8CTAUJ0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
       },
       "source": [
         "# **Eai, beleza?!**\n",
-        "# **Bora pra Segunda aula?!**\n",
+        "# **Bora pra Quarta aula?!**\n",
         "\n",
         "\n",
         "\n",
@@ -100,7 +100,7 @@
         "dados = pd.read_csv(url_dados, compression = 'zip')\n",
         "dados"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1172,7 +1172,7 @@
         "mapa = {'droga': 'composto'}\n",
         "dados.rename(columns=mapa, inplace=True)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1188,7 +1188,7 @@
       "source": [
         "dados.head()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1747,7 +1747,7 @@
       "source": [
         "cod_compostos = dados['composto'].value_counts().index[0:5]"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1762,7 +1762,7 @@
       "source": [
         "cod_compostos"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1791,7 +1791,7 @@
       "source": [
         "dados.query('composto in @cod_compostos')"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2867,7 +2867,7 @@
         "sns.set()\n",
         "import numpy as np"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2884,7 +2884,7 @@
         "dados_resultados = pd.read_csv('https://github.com/alura-cursos/imersaodados3/blob/main/dados/dados_resultados.csv?raw=true')\n",
         "dados_resultados.head()"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3447,7 +3447,7 @@
       "source": [
         "dados_resultados['acat_inhibitor'].unique()"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3475,7 +3475,7 @@
       "source": [
         "dados_resultados.info()"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3503,7 +3503,7 @@
         "contagem_moa01 = dados_resultados.select_dtypes('int64').sum().sort_values(ascending=False)\n",
         "contagem_moa01"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3543,7 +3543,7 @@
         "contagem_moa02 = dados_resultados.drop('id', axis=1).sum().sort_values(ascending=False)\n",
         "contagem_moa02"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3582,7 +3582,7 @@
       "source": [
         "dados_resultados.drop('id', axis=1).sum(axis=1)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3617,7 +3617,7 @@
       "source": [
         "dados_resultados['n_moa'] = dados_resultados.drop('id', axis=1).sum(axis=1)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3634,7 +3634,7 @@
         "dados_resultados['ativo_moa'] = dados_resultados['n_moa'] !=0\n",
         "dados_resultados.head()"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4198,7 +4198,7 @@
       "source": [
         "dados.head()"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4763,7 +4763,7 @@
         "dados_combinados = pd.merge(dados, dados_resultados[['id', 'n_moa', 'ativo_moa']], on='id')\n",
         "dados_combinados.head()"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5326,7 +5326,7 @@
       "source": [
         "dados_combinados.query('tratamento == \"com_controle\"')['ativo_moa'].value_counts()"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5355,7 +5355,7 @@
       "source": [
         "dados_combinados.query('tratamento == \"com_droga\"')['ativo_moa'].value_counts()"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5386,7 +5386,7 @@
       "source": [
         "sns.boxplot(data = dados_combinados, y= 'g-0', x= 'composto')"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5429,7 +5429,7 @@
         "plt.figure(figsize=(12,8))\n",
         "sns.boxplot(data = dados_combinados.query('composto in @composto_principal'), y= 'g-0', x= 'composto', hue='ativo_moa')"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5465,7 +5465,7 @@
       "source": [
         ""
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     }
   ]
